# zk-proof

./: .gitignore  API.md  BUILD.md  CONTRACTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  INSTALLATION.md  README.md  TESTING.md  build.sh  deploy.sh  docker-compose.yml  output.json  sync.sh  test.sh
circuit/: Cargo.toml  Dockerfile  ZkManager.sol  ZkManager.t.sol  ZkVerifier.sol  foundry.toml
circuit/src/: auth.rs  circuit.rs  contracts.rs  files.rs  main.rs  proof.rs  routes.rs  security.rs  telemetry.rs  types.rs
infra/: Dockerfile  otel-collector-config.yaml  prometheus.yml  start-anvil.sh
infra/grafana/datasources/: prometheus.yml
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: GUEST.elf  main.rs  worker.rs
